Bug 415526 - Cards have visual artifacts when using RTL languages
Summary: Cards have visual artifacts when using RTL languages
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: Master
Platform: Other Linux
: NOR normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-24 14:22 UTC by Nicolas Fella
Modified: 2020-04-21 09:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (99.40 KB, image/png)
2019-12-24 14:22 UTC, Nicolas Fella
Details
Screenshot 2 (167.93 KB, image/png)
2019-12-24 14:23 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2019-12-24 14:22:42 UTC
Created attachment 124691 [details]
Screenshot

SUMMARY
Cards-List/Gridview have visual artifcats on the side when using RTL languages

STEPS TO REPRODUCE
1. kirigami2gallery -reverse

OBSERVED RESULT
See attachment

KDE Frameworks Version: master
Qt Version: 5.13.2
Comment 1 Nicolas Fella 2019-12-24 14:23:00 UTC
Created attachment 124692 [details]
Screenshot 2
Comment 2 Arjen Hiemstra 2020-04-21 09:56:17 UTC
Git commit e770b0ddd2af7fc861be45044476b4fa062ccc1d by Arjen Hiemstra.
Committed on 21/04/2020 at 09:56.
Pushed by ahiemstra into branch 'master'.

Use ShadowedRectangle for Card backgrounds

Summary:
This switches cards to use ShadowedRectangle for their background. It also refreshes their
design a bit, based on feedback from the VDG.

Still WIP because of potential design issues and I'm not entirely happy with the code for
the actual cards. Ideally I'd also move a bunch of this stuff to C++ but that'd involve a
reimplementing a bunch of Control behaviour.

Test Plan:
New cards, normal colour scheme:

{F8221005}

Breeze Dark:

{F8221010}

Reviewers: #kirigami, #vdg, cblack, mart

Reviewed By: #kirigami, #vdg, cblack, mart

Subscribers: mart, ngraham, nicolasfella, cblack, plasma-devel

Tags: #kirigami

Differential Revision: https://phabricator.kde.org/D28625

M  +20   -1    src/colorutils.cpp
M  +18   -0    src/colorutils.h
M  +18   -15   src/controls/AbstractCard.qml
M  +5    -1    src/controls/Card.qml
M  +10   -4    src/controls/ShadowedImage.qml
M  +15   -21   src/controls/private/BannerImage.qml
M  +11   -81   src/controls/private/DefaultCardBackground.qml
M  +1    -1    src/scenegraph/shaders/sdf.glsl
M  +1    -1    src/scenegraph/shadowedtexturenode.cpp
M  +12   -33   src/shadowedtexture.cpp

https://commits.kde.org/kirigami/e770b0ddd2af7fc861be45044476b4fa062ccc1d